--- a/content/posts/攻击WPA保护下的802.11网络.md
+++ b/content/posts/攻击WPA保护下的802.11网络.md
@@ -4,7 +4,7 @@ description = ""
 draft = false
 tags = ["wireless"]
 title = "攻击WPA保护下的802.11网络"
-topics = ["Wireless"]
+topics = ["Other"]
 
 +++
 
