--- a/content/posts/渗透测试流程-单台服务器.md
+++ b/content/posts/渗透测试流程-单台服务器.md
@@ -2,7 +2,7 @@
 date = "2016-06-19T19:31:33+08:00"
 description = ""
 draft = false
-tags = ["pentest"]
+tags = ["脑图"]
 title = "渗透测试流程(单台服务器)"
 topics = ["Pentest"]
 
