--- a/content/posts/爆破邮箱.md
+++ b/content/posts/爆破邮箱.md
@@ -3,7 +3,7 @@ date = "2016-05-12T15:27:14+08:00"
 description = ""
 draft = false
 tags = ["爆破"]
-title = "爆破邮箱弱口令"
+title = "爆破邮箱"
 topics = ["Pentest"]
 
 +++
