--- a/content/posts/代码执行漏洞2.md
+++ b/content/posts/代码执行漏洞2.md
@@ -8,7 +8,7 @@ topics = ["Pentest"]
 
 +++
 
-接着上一篇：http://reber-9.com/post/代码执行漏洞/
+接着上一篇：http://reber-9.com/posts/代码执行漏洞/
 ### 0x00 函数create_function()
 > php中的函数create_function()可以创建一个匿名函数，其函数原型如下：
 ```
