mv 敏感信息泄漏.md 敏感信息泄露.md

--- a/content/posts/敏感信息泄露.md
+++ b/content/posts/敏感信息泄露.md
@@ -2,8 +2,8 @@
 date = "2016-07-28T22:42:58+08:00"
 description = ""
 draft = false
-tags = ["信息泄漏"]
-title = "敏感信息泄漏"
+tags = ["信息泄露"]
+title = "敏感信息泄露"
 topics = ["Pentest"]
 
 +++
